# KalmanFilter

./: CMakeLists.txt  Mathematics.md  ReadMe.md
Python_Plot/: plot_result.py
data/: data-1.txt  out-1.txt  out-2.txt  out-original.txt
src/: datapoint.cpp  datapoint.hpp  fusionEKF.cpp  fusionEKF.hpp  kalmanfilter.cpp  kalmanfilter.hpp  main.cpp  tools.cpp  tools.hpp  usageCheck.cpp  usageCheck.hpp
